# buildzr

./: .gitignore  CLAUDE.md  DOCS_SETUP.md  PERFORMANCE_IMPROVEMENTS.md  README.md  ROADMAP.md  amazon_web_services.json  environment.yml  hatch_build.py  mkdocs.yml  mypy.ini  pyproject.toml
.claude/commands/: query-structurizr.md
.claude/skills/: structurizr-java.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  docs.yml  prerelease.yml  release.yml  tests.yml
buildzr/: __about__.py  __init__.py  main.py
buildzr/dsl/: __init__.py  dsl.py  explorer.py  expression.py  relations.py
buildzr/encoders/: __init__.py  encoder.py
buildzr/exporters/: __init__.py  jar_locator.py  workspace_converter.py
buildzr/loaders/: json_loader.py
buildzr/models/: __init__.py  c4types.py  component.py  component_view.py  (+11 more)
docs/: index.md
examples/: amazon_web_services.ipynb  amazon_web_services.json  amazon_web_services.py  buildzr_models_example.json  buildzr_models_example.py  cookbook_custom_element.py  cookbook_custom_element_equivalent.py  deployment_groups.json  deployment_groups.py  dynamic_view.json  dynamic_view.py  simple.py  system_context_and_container_view.json  system_context_and_container_view.py  system_landscape.json  workspace_extension.json  workspace_extension.py
overrides/: main.html
src/: environment.yml
tests/: test_dsl.py  test_dsl_context.py  test_explorer.py  test_export_plantuml.py  test_expression.py  test_notebook_display.py  test_themes.py  test_views.py  test_workspace_extension.py  test_workspaces.py
(+52 files in other folders)
