[project]
name = "buildzr"
version = "0.0.1"
description = "Programmatically build C4 diagrams."

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "buildzr",
    "buildzr.encoders",
    "buildzr.models",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = false
ignore_missing_imports = false
show_error_codes = true
warn_unused_ignores = true